--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>pixelmind-plugin-unity-pkg - copia</title>
+    <title>instaVerse</title>
     <style>
         * {
             padding: 0;
@@ -152,7 +152,7 @@
         <div id="unity-progress-bar">
         </div>
     </div>
-    <script src="Build/pasarela de pago.loader.js"></script>
+    <script src="Build/pasarela de pago 2.loader.js"></script>
     <script>
     const maxPixelRatioMobile = 2.0;
     const maxPixelRatioDesktop = 1.5;
@@ -162,15 +162,15 @@
     var pixelRatio = Math.min(window.devicePixelRatio, maxDevicePixelRatio);
 
     var buildUrl = "Build";
-    var loaderUrl = buildUrl + "/pasarela de pago.loader.js";
+    var loaderUrl = buildUrl + "/pasarela de pago 2.loader.js";
     var config = {
-      dataUrl: buildUrl + "/pasarela de pago.data",
-      frameworkUrl: buildUrl + "/pasarela de pago.framework.js",
-      codeUrl: buildUrl + "/pasarela de pago.wasm",
+      dataUrl: buildUrl + "/pasarela de pago 2.data",
+      frameworkUrl: buildUrl + "/pasarela de pago 2.framework.js",
+      codeUrl: buildUrl + "/pasarela de pago 2.wasm",
       streamingAssetsUrl: "StreamingAssets",
-      companyName: "DefaultCompany",
-      productName: "pixelmind-plugin-unity-pkg - copia",
-      productVersion: "1.0",
+      companyName: "Nagare Games",
+      productName: "instaVerse",
+      productVersion: "0.1",
       devicePixelRatio: pixelRatio
     };
 
